midpoint-live-demo/base/kubernetes-objects/inalogy-hr/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-be
  template:
    metadata:
      labels:
        app: hr-be
    spec:
      containers:
        - name: hr-be
          image: 'inalogy/hr-be'
          imagePullPolicy: Always
          ports:
            - name: be
              containerPort: 8000
              protocol: TCP
      restartPolicy: Always
