midpoint-live-demo/base/kubernetes-objects/inalogy-hr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr
  template:
    metadata:
      labels:
        app: hr
    spec:
      containers:
        - name: hr
          image: 'inalogy/hr'
          imagePullPolicy: Always
          ports:
            - name: hr
              containerPort: 8000
              protocol: TCP
      restartPolicy: Always
