midpoint-live-demo/base/kubernetes-objects/inalogy-hr/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-fe
  template:
    metadata:
      labels:
        app: hr-fe
    spec:
      containers:
        - name: hr-fe
          image: 'inalogy/hr-fe'
          ports:
            - name: fe 
              containerPort: 8081
              protocol: TCP
      restartPolicy: Always
