midpoint-live-demo/base/kubernetes-objects/inalogy-hr/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hr-be-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: hr-be
  type: ClusterIP
  sessionAffinity: None
