midpoint-live-demo/base/kubernetes-objects/inalogy-hr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hr-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: hr
  type: ClusterIP
  sessionAffinity: None
