midpoint-live-demo/base/kubernetes-objects/inalogy-hr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-ingress
  annotations: 
    kubernetes.io/ingress.class: azure/application-gateway
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - hr.domain
      secretName: cert-mp-demo
  rules:
    - host: hr.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hr-fe-service
                port:
                  number: 8081
